# researchpulse

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  config.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/alerts/: page.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/digest/: page.tsx
frontend/src/app/feed/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: alert-list.tsx  answer-card.tsx  ask-form.tsx  digest-viewer.tsx  item-card.tsx  item-feed.tsx  loading.tsx  search-bar.tsx  sidebar.tsx  source-badge.tsx  stats-cards.tsx
frontend/src/lib/: api.ts  hooks.ts  types.ts  utils.ts
researchpulse/: __init__.py  cli.py  config.py
researchpulse/outputs/: __init__.py  alert_engine.py  dashboard_api.py  digest_generator.py  rag_query.py
researchpulse/pipeline/: __init__.py  chunker.py  classifier.py  deduplicator.py  embedder.py  orchestrator.py  summarizer.py
researchpulse/scheduler/: __init__.py  tasks.py
researchpulse/scrapers/: __init__.py  arxiv_scraper.py  base.py  github_scraper.py  models.py  news_scraper.py  reddit_scraper.py
researchpulse/storage/: __init__.py  database.py  dataset_exporter.py  db_models.py  repository.py  vector_store.py
researchpulse/utils/: __init__.py  logging.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_alert_engine.py  test_api_new_endpoints.py  test_arxiv_scraper.py  test_chunker.py  test_classifier.py  test_config.py  test_dashboard_api.py  test_deduplicator.py  test_digest.py  test_embedder.py  test_github_scraper.py  test_models.py  test_news_scraper.py  test_pipeline.py  test_rag_query.py  test_rate_limiter.py  test_reddit_scraper.py  test_scheduler.py  test_storage.py  test_summarizer.py
