[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "researchpulse"
version = "0.1.0"
description = "Open Source AI Research Scraper — multi-source research intelligence platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ResearchPulse Contributors" }]

dependencies = [
    # Web & API
    "httpx>=0.27,<1.0",
    "feedparser>=6.0,<7.0",
    "arxiv>=2.1,<3.0",
    "asyncpraw>=7.7,<8.0",
    # Database
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<1.0",
    "alembic>=1.14,<2.0",
    # LLM & AI
    "langchain>=0.3,<1.0",
    "langchain-anthropic>=0.3,<1.0",
    "langchain-openai>=0.3,<1.0",
    # Vector DB
    "qdrant-client>=1.12,<2.0",
    # API framework
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    # Task queue
    "celery[redis]>=5.4,<6.0",
    # Config & CLI
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "typer>=0.15,<1.0",
    "rich>=13.0,<14.0",
    # Utilities
    "tenacity>=9.0,<10.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "pytest-cov>=6.0,<7.0",
    "respx>=0.22,<1.0",
    "aiosqlite<=0.17.0",
    "ruff>=0.8,<1.0",
    "mypy>=1.13,<2.0",
]
crawl = [
    "crawl4ai>=0.4",
]

[project.scripts]
researchpulse = "researchpulse.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests that require external services",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
